# python-project-51

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  page-loader-hexlet-repl-co.html  pyproject.toml
.github/workflows/: ci.yaml  my_check.yml  test_ci.yml
page_loader/: __init__.py  cli.py  content_extractor.py  images.py  loader.py  loading.py  main_scr.py  mkfolders.py  naming.py  new_attempt.py  page-loader-hexlet-repl-co.html  page_loader.py  page_loader_tool.py  request_module.py  urls.py
page_loader/badsite-com_files/: badsite-com.html
page_loader/scripts/: myscript.py
page_loader/tmp/var/: pythonworld-ru-moduli-modul-os-path-html.html
page_loader/tmp/var/pythonworld-ru-moduli-modul-os-path-html_files/: pythonworld-ru-moduli-modul-os-path-html-m-css-st.css  pythonworld-ru-moduli-modul-os-path-html-m-js-nav.js  pythonworld-ru-moduli-modul-os-path-html-m-mistypes-mistypes.js
pageloader/: __init__.py  cli.py  images.py  loader.py  logsample.py  main_scr.py  mkfolders.py  naming.py  request_module.py
pageloader/page-loader-hexlet-repl-co_files/: page-loader-hexlet-repl-co.html
pageloader/ru-hexlet-io-courses_files/: courses.html  lessons.rss  ru-hexlet-io-courses.html
pageloader/scripts/: myscript.py
tests/: test_download.py  test_page.py  test_page_loader_tool.py
tests/fixtures/: adress_sample.txt  expected.html  page_sample.html  path_sample.txt  result_sample.txt
tests/fixtures/site-com-blog-about_files/: site-com-blog-about.html
