[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["MonkeyBusiness <crimson.oliver@gmail.com>"]
readme = "README.md"
packages = [{include = "pageloader"}]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pathlib = "^1.0.1"
requests = "^2.28.1"
requests-mock = "^1.10.0"

[tool.poetry.scripts]
pageloader = "pageloader.scripts.myscript:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
